fix: margins and paddings - and flex gaps

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -17,7 +17,7 @@ header {
     height: 300px;
 
     .container {
-        width: 80%;
+        width: 82%;
         margin: auto;
     }
 
@@ -25,12 +25,14 @@ header {
         color: white;
         text-align: center;
         padding-top: 26px;
-        font-size: 1.8rem;
+        font-size: 1.5rem;
         padding-bottom: 26px;
+        width: 228px;
+        margin: auto;
     }
 
     .hero {
-        width: 77%;
+        width: 82%;
         margin: auto;
         text-align: center;
         background-color: white;
@@ -39,10 +41,9 @@ header {
         /* justify-content: center; */
         flex-wrap: nowrap;
         flex-direction: column;
-        row-gap: 40px;
+        row-gap: 15px;
         position: absolute;
-        z-index: 2;
-        left: 12%;
+        z-index: 2;        
         margin-top: 30px;
         border-radius: 16px;
         padding: 15px;
@@ -62,18 +63,20 @@ form.locationDetails {
     position: relative;
 
 }
+
 h2 {
     font-weight: 300;
     font-size: 1rem;
 }
-h3 {
-    margin-top: 10px;
+
+h3 {  
     font-weight: 600;
 }
+
 button {
     position: absolute;
     width: 12%;
-    padding: 25px;
+    padding: 19px;
     background-color: black;
     right: 0px;
     border-bottom-right-radius: 10px;
@@ -82,7 +85,7 @@ button {
 
 input[type="search"] {
     width: 100%;
-    padding: 15px;
+    padding: 9px;
     border-radius: 10px;
     margin: auto;
     font-size: 2rem;
